STY: Style fixes of meson build files in `special`

--- a/scipy/special/_precompute/meson.build
+++ b/scipy/special/_precompute/meson.build
@@ -11,13 +11,12 @@ python_sources = [
   'wright_bessel.py',
   'wright_bessel_data.py',
   'wrightomega.py',
-  'zetac.py',
+  'zetac.py'
 ]
 
 
 py3.install_sources(
-    python_sources,
-    pure: false,
-    subdir: 'scipy/special/_precompute'
+  python_sources,
+  pure: false,
+  subdir: 'scipy/special/_precompute'
 )
-
