--- a/scipy/stats/tests/data/nist_anova/meson.build
+++ b/scipy/stats/tests/data/nist_anova/meson.build
@@ -1,14 +1,16 @@
-py3.install_sources(['SmLs01.dat',
-    'SmLs08.dat',
+py3.install_sources([
+    'AtmWtAg.dat',
+    'SiRstv.dat',
+    'SmLs01.dat',
     'SmLs02.dat',
     'SmLs03.dat',
-    'SmLs06.dat',
     'SmLs04.dat',
     'SmLs05.dat',
-    'SiRstv.dat',
-    'SmLs09.dat',
+    'SmLs06.dat',
     'SmLs07.dat',
-    'AtmWtAg.dat'],
-    pure : false,
-    subdir : 'scipy/stats/tests/data/nist_anova'
+    'SmLs08.dat',
+    'SmLs09.dat'
+  ],
+  pure: false,
+  subdir: 'scipy/stats/tests/data/nist_anova'
 )
