--- a/scipy/stats/tests/data/nist_linregress/meson.build
+++ b/scipy/stats/tests/data/nist_linregress/meson.build
@@ -1,4 +1,6 @@
-py3.install_sources(['Norris.dat'],
-    pure : false,
-    subdir : 'scipy/stats/tests/data/nist_linregress'
+py3.install_sources([
+    'Norris.dat'
+  ],
+  pure: false,
+  subdir: 'scipy/stats/tests/data/nist_linregress'
 )
