BLD: minor fix to sparse.linalg.isolve build file

--- a/scipy/sparse/linalg/isolve/meson.build
+++ b/scipy/sparse/linalg/isolve/meson.build
@@ -68,16 +68,15 @@ _iterative_module = custom_target('_iterative_module',
 _iterative = py3.extension_module('_iterative',
   [
     _iterative_module,
+    fortranobject_c,
+    g77_abi_wrappers,
     methods_f_0,
     methods_f_1,
     methods_f_2,
     methods_f_3,
     methods_f_4,
     methods_f_5,
-    Util_f_0,
-    _iterative_module,
-    fortranobject_c,
-    g77_abi_wrappers
+    Util_f_0
   ],
   c_args: numpy_nodepr_api,
   fortran_args: fortran_ignore_warnings,
