--- a/scipy/special/tests/meson.build
+++ b/scipy/special/tests/meson.build
@@ -14,6 +14,7 @@ python_sources = [
   'test_faddeeva.py',
   'test_gamma.py',
   'test_gammainc.py',
+  'test_hyp2f1.py',
   'test_hypergeometric.py',
   'test_kolmogorov.py',
   'test_lambertw.py',
