--- a/scipy/interpolate/meson.build
+++ b/scipy/interpolate/meson.build
@@ -192,12 +192,18 @@ py3.install_sources([
     '_bsplines.py',
     '_cubic.py',
     '_fitpack_impl.py',
+    '_fitpack_py.py',
+    '_fitpack2.py',
+    '_interpnd_info.py',
+    '_interpolate.py',
+    '_ndgriddata.py',
     '_pade.py',
+    '_polyint.py',
+    '_rbf.py',
     '_rbfinterp.py',
     '_rbfinterp_pythran.py',
     'fitpack.py',
     'fitpack2.py',
-    'interpnd_info.py',
     'interpolate.py',
     'ndgriddata.py',
     'polyint.py',
