MAINT: Update meson build files with private API changes

--- a/scipy/io/_harwell_boeing/meson.build
+++ b/scipy/io/_harwell_boeing/meson.build
@@ -4,7 +4,7 @@ py3.install_sources([
     'hb.py'
   ],
   pure: false,
-  subdir: 'scipy/io/harwell_boeing'
+  subdir: 'scipy/io/_harwell_boeing'
 )
 
 subdir('tests')
