--- a/scipy/io/meson.build
+++ b/scipy/io/meson.build
@@ -29,7 +29,12 @@ _test_fortran = py3.extension_module('_test_fortran',
 py3.install_sources([
     '__init__.py',
     '_fortran.py',
+    '_idl.py',
+    '_mmio.py',
+    '_netcdf.py',
+    'harwell_boeing.py',
     'idl.py',
+    'matlab.py',
     'mmio.py',
     'netcdf.py',
     'wavfile.py'
@@ -39,6 +44,6 @@ py3.install_sources([
 )
 
 subdir('tests')
-subdir('matlab')
+subdir('_matlab')
 subdir('arff')
-subdir('harwell_boeing')
+subdir('_harwell_boeing')
