--- a/scipy/linalg/meson.build
+++ b/scipy/linalg/meson.build
@@ -233,17 +233,28 @@ py3.extension_module('_decomp_update',
 
 python_sources = [
   '__init__.py',
+  '_basic.py',
+  '_decomp.py',
+  '_decomp_cholesky.py',
   '_decomp_cossin.py',
   '_decomp_ldl.py',
+  '_decomp_lu.py',
   '_decomp_polar.py',
+  '_decomp_qr.py',
   '_decomp_qz.py',
+  '_decomp_schur.py',
+  '_decomp_svd.py',
   '_expm_frechet.py',
+  '_flinalg_py.py',
   '_interpolative_backend.py',
+  '_matfuncs.py',
   '_matfuncs_inv_ssq.py',
   '_matfuncs_sqrtm.py',
+  '_misc.py',
   '_procrustes.py',
   '_sketches.py',
   '_solvers.py',
+  '_special_matrices.py',
   '_testutils.py',
   'basic.py',
   'blas.py',
