--- a/scipy/spatial/transform/meson.build
+++ b/scipy/spatial/transform/meson.build
@@ -1,5 +1,5 @@
-rotation = py3.extension_module('rotation',
-  ['rotation.pyx'],
+rotation = py3.extension_module('_rotation',
+  ['_rotation.pyx'],
   c_args: '-Wno-cpp', # TODO: replace with numpy_nodepr_api
   include_directories: [incdir_numpy],
   dependencies: [py3_dep],
@@ -8,7 +8,7 @@ rotation = py3.extension_module('rotation',
 )
 
 py3.install_sources(
-  'rotation.pyi',
+  '_rotation.pyi',
   pure: false,
   subdir: 'scipy/spatial/transform'
 )
@@ -16,7 +16,8 @@ py3.install_sources(
 py3.install_sources([
     '__init__.py',
     '_rotation_groups.py',
-    '_rotation_spline.py'
+    '_rotation_spline.py',
+    'rotation.py'
   ],
   pure: false,
   subdir: 'scipy/spatial/transform'
