--- a/scipy/sparse/linalg/meson.build
+++ b/scipy/sparse/linalg/meson.build
@@ -1,6 +1,8 @@
 py3.install_sources([
     '__init__.py',
     '_expm_multiply.py',
+    '_interface.py',
+    '_matfuncs.py',
     '_norm.py',
     '_onenormest.py',
     '_svdp.py',
@@ -12,7 +14,7 @@ py3.install_sources([
 )
 
 subdir('_propack')
-subdir('isolve')
-subdir('dsolve')
-subdir('eigen')
+subdir('_isolve')
+subdir('_dsolve')
+subdir('_eigen')
 subdir('tests')
