--- a/scipy/stats/_boost/meson.build
+++ b/scipy/stats/_boost/meson.build
@@ -1,6 +1,7 @@
 cpp_args = [
   '-DBOOST_MATH_DOMAIN_ERROR_POLICY=ignore_error',
-  '-DBOOST_MATH_EVALUATION_ERROR_POLICY=user_error'
+  '-DBOOST_MATH_EVALUATION_ERROR_POLICY=user_error',
+  '-DBOOST_MATH_OVERFLOW_ERROR_POLICY=user_error'
 ]
 
 if meson.get_compiler('cpp', native: true).sizeof('void*') > 4
