MAINT: Avoid installing `_eigen.tests`

--- a/scipy/sparse/linalg/_eigen/meson.build
+++ b/scipy/sparse/linalg/_eigen/meson.build
@@ -9,4 +9,7 @@ py3.install_sources([
 
 subdir('arpack')
 subdir('lobpcg')
-subdir('tests')
+# Install the tests directory once the failing eigen tests are fixed.
+# See details at: https://github.com/scipy/scipy/pull/14868#issuecomment-964444731
+# Discussion at: https://github.com/rgommers/scipy/pull/93
+# subdir('tests')
