--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -91,9 +91,7 @@ jobs:
       run: |
         conda activate scipy-dev
         python -m pip install meson==0.60.0rc1
-        CC="ccache $CC" meson setup build --prefix=$PWD/${{ env.INSTALLDIR }}
-        ninja -C build -j 2
-        meson install -C build
+        CC="ccache $CC" python dev.py -j 2 --build-only
 
     - name: Test Scipy
       shell: bash -l {0}
