--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -91,15 +91,15 @@ jobs:
       run: |
         conda activate scipy-dev
         python -m pip install meson==0.60.0rc1
-        CC="ccache $CC" python dev.py -j 2 --build-only
+        CC="ccache $CC" python dev.py -rb --installdir ${{ env.INSTALLDIR }} -j 2 --build-only
 
     - name: Test Scipy
       shell: bash -l {0}
       run: |
         conda activate scipy-dev
         export PYTHONPATH="$PWD/installdir/lib/python3.9/site-packages/"
-        pushd installdir
-        python -c "import scipy; import sys; sys.exit(int(not scipy.test(parallel=2)))"
+        pushd ${{ env.INSTALLDIR }}
+        python dev.py -n -j 2
         popd
 
     - name: Ccache statistics
