MAINT: Add `dev.py` for building and installing scipy with meson (#94)

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -77,17 +77,9 @@ jobs:
         restore-keys: |
           ${{ github.workflow }}-${{ matrix.python-version }}-ccache-linux-
 
-    - name: Setup build
+    - name: Setup build and install scipy
       run: |
-        meson setup build --prefix=$PWD/${{ env.INSTALLDIR }} --werror
-
-    - name: Build SciPy
-      run: |
-        ninja -C build -j 2
-
-    - name: Install SciPy
-      run: |
-        meson install -C build
+        python dev.py -j 2 --build-only --werror
 
     - name: Ccache performance
       shell: bash -l {0}
@@ -101,7 +93,4 @@ jobs:
 
     - name: Test SciPy
       run: |
-        export PYTHONPATH="$PWD/installdir/lib/python3.9/site-packages/"
-        pushd ${{ env.INSTALLDIR }}
-        python -c "import scipy; import sys; sys.exit(int(not scipy.test(parallel=2)))"
-        popd
+        python dev.py -n -j 2
