--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -91,18 +91,13 @@ jobs:
       run: |
         conda activate scipy-dev
         python -m pip install meson==0.60.0rc1
-        CC="ccache $CC" meson setup build --prefix=$PWD/${{ env.INSTALLDIR }}
-        ninja -C build -j 2
-        meson install -C build
+        CC="ccache $CC" python dev.py -j 2 --build-only
 
     - name: Test Scipy
       shell: bash -l {0}
       run: |
         conda activate scipy-dev
-        export PYTHONPATH="$PWD/installdir/lib/python3.9/site-packages/"
-        pushd installdir
-        python -c "import scipy; import sys; sys.exit(int(not scipy.test(parallel=2)))"
-        popd
+        python dev.py -n -j 2
 
     - name: Ccache statistics
       shell: bash -l {0}
