--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,10 +1,13 @@
+name: Windows Tests
+
 on:
   push:
     branches:
-      - clean-meson-windows
+      - meson
+
   pull_request:
     branches:
-      - clean-meson-windows
+      - meson
 
 jobs:
   test:
