BLD: meson: add missing propack test file to build config

--- a/scipy/sparse/linalg/tests/meson.build
+++ b/scipy/sparse/linalg/tests/meson.build
@@ -1,5 +1,6 @@
 py3.install_sources([
     '__init__.py',
+    'propack_test_data.npz',
     'test_expm_multiply.py',
     'test_interface.py',
     'test_matfuncs.py',
