BLD: meson: fix version string related code

--- a/meson.build
+++ b/meson.build
@@ -1,10 +1,12 @@
 project(
   'SciPy',
   'c', 'cpp', 'cython',
-  # https://stackoverflow.com/questions/59201214/can-the-meson-project-version-be-assigned-dynamically
-  version: '1.7.0.dev0+ababababab', # FIXME: git hash (see URL above).
+  # Note that the git commit hash cannot be added dynamically here (it is added
+  # in the dynamically generated and installed `scipy/version.py` though - see
+  # tools/version_utils.py
+  version: '1.9.0.dev0',
   license: 'BSD-3',
-  meson_version: '>= 0.54',
+  meson_version: '>= 0.60',
   default_options: [
     'buildtype=debugoptimized',
     'c_std=c99',
