--- a/.gitignore
+++ b/.gitignore
@@ -251,7 +251,7 @@ scipy/sparse/sparsetools/csc_impl.h
 scipy/sparse/sparsetools/csr_impl.h
 scipy/sparse/sparsetools/other_impl.h
 scipy/sparse/sparsetools/sparsetools_impl.h
-scipy/spatial/ckdtree.cxx
+scipy/spatial/_ckdtree.cxx
 scipy/spatial/ckdtree.cpp
 scipy/spatial/ckdtree.h
 scipy/spatial/_hausdorff.c
